--- a/styles.css
+++ b/styles.css
@@ -156,38 +156,68 @@ main {
 
 .services-section {
     background-color: #c515b8;
-    color: #f4f4f9;
+    color: #e9dfe8;
     padding: 5.87rem 5.9rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin: 2rem 0;
-    display: flex;
+    display: flex; 
     flex-direction: column;
     margin-top: 37px;
 }
 
-.services-section article{
+.services-section article:first-of-type{
     display: flex;
     flex-direction: column;
     margin: auto;
     margin-bottom: 67px;
 }
 
-.services-section  h3 {
-    font-weight: 700;
-    font-size: 50px;
-    text-align: center;
+.services-section article:nth-of-type(2){
+    display: flex;
+    gap: 100px;
 }
 
-.services-section  p {
+.services-section  h3 {
+    font-weight: 700;
+    font-size: 70px;
+    text-align: center;
+    color: #580853;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+    margin: 30px;
+}
+
+h4{
+    font-size:40px ;
+    font-weight: 700;
+    color: #580853;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+    margin: 0;
+}
+
+.services-section article:first-of-type p {
     width: 412px;
     font-weight: 400;
-    font-size: 17px;
-    margin: 10px 0;
+    font-size: 18px;
+    margin: 0;
     line-height: 21px;
     text-align: center;
 }
 
-/* styles.css */
+.image-div > img{
+    width: 500px;
+}
+
+.services-list{
+    margin: 120px 0;
+}
+
+.services-list p{
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+/* styles.css
 
 body {
     font-family: Arial, sans-serif;
@@ -281,4 +311,4 @@ body {
         flex-direction: column;
         align-items: center;
     }
-}
+} */
