--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ li {
     justify-content: space-between;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, .projects-section p {
     font-weight: 700;
     color: #580853;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
@@ -161,7 +161,7 @@ main {
     color: #e9dfe8;
     padding: 5.87rem 5.9rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin: 2rem 0 37px;
+    margin: 2rem 0 0;
     display: flex;
     flex-direction: column;
 }
@@ -225,7 +225,7 @@ main {
     align-items: flex-end;
 }
 
-.read-more {
+.read-more,.projects-section button {
     background: linear-gradient(65deg, #a0539b, #580853);
     color: #ffffff;
     border: none;
@@ -243,6 +243,62 @@ main {
 }
 
 .read-more img{
-    width: 20px;
+    width: 15px;
     
+}
+
+.projects-section {
+    padding: 0 5.5rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.projects-section > div:first-of-type{
+    width: 50%;
+    padding-top: 5.87rem;
+}
+
+.projects-section p{
+    font-size: 60px;
+    line-height: 70px;
+    text-align: left;
+    width: 600px;
+}
+
+.projects-section button{
+    width: 170px;
+    height: 60px;
+    border-radius: 30px;
+    font-weight: 700;
+    font-size: 20px;
+    background: none;
+    background-color: #F9B5FF;
+    color: #210B26;
+}
+
+.project-grid{
+    width: 600px;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.project-grid img, .project-grid a{
+    width: 300px;
+    max-height: 400px;
+}
+
+.project-item {
+    transition: transform 0.3s;
+}
+
+.project-item:hover {
+    transform: scale(1.05);
+}
+
+
+.project-item a {
+    text-decoration: none;
+    transition: background-color 0.3s;
 }
