--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ li {
     justify-content: space-between;
 }
 
-h1, h2, h3, h4, .projects-section p {
+h1, h2, h3, h4, h5 .projects-section p {
     font-weight: 700;
     color: #580853;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
@@ -83,6 +83,15 @@ h4 {
     font-size: 32px;
     margin: 0;
     margin-bottom: 5px;
+    color: #580853;
+}
+
+h5{
+    font-size: 3.5rem;
+    line-height: 60px;
+    text-align: left;
+    width: 450px;
+    color: #580853;
 }
 
 p {
@@ -156,7 +165,7 @@ main {
     font-size: 28px;
 }
 
-.services-section {
+.services-section, .contact-section {
     background-color: #c515b8;
     color: #e9dfe8;
     padding: 5.87rem 5.9rem;
@@ -225,7 +234,7 @@ main {
     align-items: flex-end;
 }
 
-.read-more,.projects-section button {
+.read-more,button {
     background: linear-gradient(65deg, #a0539b, #580853);
     color: #ffffff;
     border: none;
@@ -248,10 +257,11 @@ main {
 }
 
 .projects-section {
-    padding: 0 5.5rem;
+    padding: 0 0  0 2.5rem;
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 30px;
 }
 
 .projects-section > div:first-of-type{
@@ -278,15 +288,26 @@ main {
 }
 
 .project-grid{
-    width: 600px;
     height: 100%;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
 }
 
 .project-grid img, .project-grid a{
     width: 300px;
-    max-height: 400px;
+}
+
+.project-grid img:nth-of-type(2), .project-grid a:nth-of-type(2){
+    margin: 60px 0 30px 30px;
+}
+
+.project-grid img:nth-of-type(3), .project-grid a:nth-of-type(3){
+    margin: 0 30px 0 40px;
+}
+
+.project-grid img:last-of-type, .project-grid a:last-of-type{
+    margin-top: 20px;
 }
 
 .project-item {
@@ -297,8 +318,27 @@ main {
     transform: scale(1.05);
 }
 
-
 .project-item a {
     text-decoration: none;
     transition: background-color 0.3s;
 }
+
+.contact-section{
+    display: flex;
+    flex-direction: row;
+}
+
+.contact-section div{
+    margin: auto;
+    padding: 0;
+    width: 50%;
+}
+
+.contact-section a, .contact-section button{
+    width: 300px;
+    height: 70px;
+    font-size: 28px;
+    font-weight: 900;
+}
+
+
