--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ header, a {
 }
 
 header {
+    
     background-image: url(Assets/images/bg.jpg);
     background-size: cover;
     background-position: center;
@@ -43,6 +44,7 @@ a {
 
 a:hover {
     text-decoration: underline;
+    font-weight: 900;
 }
 
 li {
@@ -64,13 +66,14 @@ li {
 
 h1, h2, h3, h4, h5 .projects-section p {
     font-weight: 700;
-    color: #580853;
+    color: #221323;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
 h1 {
     font-size: 4.4rem;
     font-weight: 900;
+    color: #FCFCFC;
 }
 
 h2 {
@@ -213,7 +216,7 @@ main {
 }
 
 .image-div > img {
-    width: 400px; 
+    width: 450px; 
     height: 600px;  
 }
 
@@ -402,6 +405,12 @@ main {
 
 footer{
     background-color: #c515b8;
+}
+
+.logo{
+    width: 13.3rem;
+    height: 3.09rem;
+    
 }
 
 .services-section,.contact-section,footer{
